new contents added in java-script

--- a/pages/form.html
+++ b/pages/form.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/form.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Add Student</title>
+  <link rel="stylesheet" href="../css/form.css">
 </head>
 <body>
 
-    <div id="formContainer"></div>
-    <script src="../js/form.js"></script>
+ <form id="form">
+
+  
+ </form>
+
+  <script src="../js/form.js"></script>
 </body>
 </html>
