--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   
-    <div class="button">
-        <button class="add-btn">Add Student</button>
+   <div class="main">
+    <div class="add">
+      <button onclick="window.location.href='./pages/form.html'">Add Student</button>
     </div>
+
+    <div class="cards"></div>
+  </div>
     
     <script src="./js/index.js"></script>
 </body>
