--- a/pages/profile.html
+++ b/pages/profile.html
@@ -13,8 +13,18 @@
     </div>
     <div class="right">
       <h2 id="profile-name"></h2>
-      <p><strong>Age:</strong> <span id="profile-age"></span></p>
-      <p><strong>DOB:</strong> <span id="profile-dob"></span></p>
+     <div class="right">
+  <h2 id="profile-name"></h2>
+  <p><strong>Email:</strong> <span id="profile-email"></span></p>
+  <p><strong>Password:</strong> <span id="profile-password"></span></p>
+  <p><strong>Age:</strong> <span id="profile-age"></span></p>
+  <p><strong>Phone:</strong> <span id="profile-phone"></span></p>
+  <p><strong>Address:</strong> <span id="profile-address"></span></p>
+  <p><strong>City:</strong> <span id="profile-city"></span></p>
+  <p><strong>Pincode:</strong> <span id="profile-pincode"></span></p>
+  <p><strong>DOB:</strong> <span id="profile-dob"></span></p>
+</div>
+
     </div>
   </div>
 
