new contents added in java-script

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -23,6 +23,8 @@
   <p><strong>City:</strong> <span id="profile-city"></span></p>
   <p><strong>Pincode:</strong> <span id="profile-pincode"></span></p>
   <p><strong>DOB:</strong> <span id="profile-dob"></span></p>
+
+   <button id="back-btn">⬅ Back</button>
 </div>
 
     </div>
