new contents added in student-details-dom

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -23,8 +23,8 @@
       <p><strong>Pincode:</strong> <span id="profile-pincode"></span></p>
       <p><strong>DOB:</strong> <span id="profile-dob"></span></p>
 
-      <!-- 🧭 Back Link with query param (JS will fill the href) -->
-      <a id="back-link" class="btn">⬅ Back</a>
+      <!-- 🧭 Back button -->
+      <a href="../index.html" class="btn">⬅ Back</a>
     </div>
   </div>
 
