--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Cards</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   <div class="main">
+  <div class="main">
     <div class="add">
       <button onclick="window.location.href='./pages/form.html'">Add Student</button>
     </div>
-
     <div class="cards"></div>
   </div>
-    
-    <script src="./js/index.js"></script>
+
+  <script src="./js/index.js"></script>
 </body>
 </html>
