--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
   <div class="main">
     <div class="add">
       <button onclick="window.location.href='./pages/form.html'">Add Student</button>
+             
     </div>
-    <div class="cards"></div>
+    <div class="cards">
+
+
+    </div>
+   
   </div>
 
   <script src="./js/index.js"></script>
